<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">

    <ImageView
        android:layout_width="404px"
        android:layout_height="404px"
        android:layout_gravity="center"
        android:src="@drawable/select_your_bank"
        android:layout_marginBottom="@dimen/px_32"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_46"
        android:gravity="center"
        android:text="@string/pay_from_your_bank"
        android:layout_marginTop="@dimen/px_16"
        android:layout_marginBottom="@dimen/px_16"
        android:textColor="@color/theme_color"/>
    <!--android:layout_width="202.5dp"-->

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_32"
        android:textColor="@color/grey_black_light"
        android:text="@string/no_loading_money"
        android:layout_marginTop="@dimen/px_16"
        android:layout_marginBottom="8px"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank_grade_security"
        android:textSize="@dimen/px_32"
        android:textColor="@color/grey_black_light"
        android:layout_marginBottom="@dimen/px_16"
        />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_payment_with_mpin"
        android:gravity="center"
        android:textSize="@dimen/text_size_32"
        android:textColor="@color/grey_black_light"
        android:layout_marginTop="@dimen/px_16"
        android:layout_marginBottom="@dimen/px_16"/>

</LinearLayout>