<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tvCouldNotFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/could_not_find_favorite_restaurant"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_32"
        android:layout_marginTop="@dimen/px_40"
        android:layout_marginLeft="@dimen/px_30"
        />


    <TextView
        android:id="@+id/tvRecommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/why_not_recommend_it"
        android:textColor="@color/text_color_light_less"
        android:textSize="@dimen/text_size_28"
        android:layout_marginTop="@dimen/px_10"
        android:layout_marginLeft="@dimen/px_30"
        />

    <EditText
        android:id="@+id/etRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_90"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_34"
        android:layout_marginRight="@dimen/px_30"
        android:background="@drawable/background_white_rounded_bordered"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/restaurant_name_star"
        android:textSize="@dimen/text_size_28"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:paddingLeft="@dimen/px_20"
        android:paddingRight="@dimen/px_20"
        android:textCursorDrawable="@drawable/cursor_black"
        />

    <EditText
        android:id="@+id/etLocality"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_90"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_20"
        android:layout_marginRight="@dimen/px_30"
        android:background="@drawable/background_white_rounded_bordered"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/locality_optional"
        android:textSize="@dimen/text_size_28"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:paddingLeft="@dimen/px_20"
        android:paddingRight="@dimen/px_20"
        android:textCursorDrawable="@drawable/cursor_black"
        />

    <EditText
        android:id="@+id/etTelephone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_90"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_20"
        android:layout_marginRight="@dimen/px_30"
        android:background="@drawable/background_white_rounded_bordered"
        android:maxLines="1"
        android:inputType="phone"
        android:hint="@string/telephone_number_optional"
        android:textSize="@dimen/text_size_28"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:paddingLeft="@dimen/px_20"
        android:paddingRight="@dimen/px_20"
        android:textCursorDrawable="@drawable/cursor_black"
        />

    
    <Button
        android:id="@+id/bSubmit"
        style="@style/ButtonTheme"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px_120"
        android:layout_marginBottom="@dimen/px_120"
        />


</LinearLayout>