<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_custom_order_root_layout"
    android:paddingEnd="@dimen/padding_custom_order_root_layout"
    android:paddingStart="@dimen/padding_custom_order_root_layout"
    android:id="@+id/rootLayoutCustomOrder"
    android:paddingBottom="@dimen/padding_bottom_delivery_home_page"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <TextView
        android:id="@+id/tvCustomText"
        app:typekitFont="@string/maven"
        android:text="@string/label_fav_restaurant"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:gravity="center"

        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/label_description"
        app:typekitFont="@string/maven"
        android:visibility="visible"
        android:text="@string/label_custom_order"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="14.5sp"
        android:textColor="@color/text_color_light"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bOrderViaFatafat"
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/capsule_theme_color_selector"
        android:text="@string/action_create_custom_order"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        app:typekitFont="@string/maven" />


</LinearLayout>