<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:tag="@string/dont_touch_me"
    android:background="@color/white"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:text="@string/view_card_title"
            android:textSize="18sp"
            app:typekitFont="@string/maven_r"
            style="@style/title"/>

        <ImageView
            android:id="@+id/imageViewBack"
            style="@style/back_image"/>
    </RelativeLayout>





    <TextView
        android:id="@+id/tv_card"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:gravity="center"
        android:text="eqeqweqwe"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edittext_background"
        android:layout_marginRight="20dp"
        android:layout_below="@id/topBar"
        app:typekitFont="@string/maven_r"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />















</RelativeLayout>

