<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:tag="@string/dont_touch_me"
    >

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/textViewTitle"
            android:text="@string/support"
            style="@style/title"
            android:textSize="17sp"
            />

        <ImageView
            android:id="@+id/imageViewBack"
            style="@style/back_image"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/white_selector"
            android:padding="10dp"
            android:rotationY="@integer/locale_mirror_flip"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_selector"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"

        >

        <TextView
            android:id="@+id/tvSendUsMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/send_us_a_mail"
            android:textColor="@color/text_color"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/issue_description"
            android:inputType="textMultiLine"
            android:maxHeight="160dp"
            android:minHeight="120dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color_light"
            android:textSize="15sp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            />

        <Button
            android:id="@+id/bSubmit"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:background="@drawable/capsule_theme_login_selector"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            />


    </LinearLayout>

</LinearLayout>