<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="@string/dont_touch_me">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvLabelInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rank_2"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/special_instructions"
        android:textColor="@color/lightBlackTxtColor"
        android:textSize="16sp"
        android:textStyle="" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bottom_border_grey"
        android:hint="@string/special_instructions_hint"
        android:maxLines="6"
        android:textSize="16sp"
        android:minHeight="50dp"
        android:paddingBottom="4dp"
        android:textColor="@color/text_color"
        tools:text="asdasdasdasdasd
asasdasdas
da
sdasdasddasdasdasd
asasdasdasdasdasdasdasdasd" />

</LinearLayout>