<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlIciciUpi"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_transparent_menu_item_selector"
    android:paddingBottom="@dimen/px_20"
    android:paddingTop="@dimen/px_20"
    android:visibility="visible">


    <LinearLayout
        android:id="@+id/layout_select_upi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivRadioIciciUpi"
            style="@style/ic_radio_button_style"
            />

        <ImageView
            android:layout_width="90px"
            android:layout_height="35px"
            android:layout_marginStart="24px"
            android:src="@drawable/upi_logo"
            android:tag="mwar"/>


        <TextView
            android:id="@+id/tvUPICashback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="@dimen/dp_2"
            android:tag="@string/dont_touch_me"
            android:text=""
            android:textColor="@color/theme_color"
            android:textSize="@dimen/sp_15"
            app:typekitFont="@string/maven"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/edtIciciVpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_select_upi"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@drawable/capsule_white_grey_border_selector"
        android:hint="@string/hint_add_upi"
        android:padding="@dimen/px_20"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:textSize="@dimen/px_28"
        android:visibility="gone"
        app:typekitFont="maven"/>

    <TextView
        android:id="@+id/tv_label_below_edt_icici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtIciciVpa"
        android:layout_marginStart="@dimen/px_10"
        android:layout_marginEnd="@dimen/px_10"
        android:text="@string/label_below_icici_payment_edt"
        android:textColor="@color/text_color"
        android:textSize="@dimen/px_24"
        android:visibility="gone"
        app:typekitFont="maven"/>

</RelativeLayout>